Address accessibility issues on /
Addresses the following report:

*** Begin accessibility audit results ***
An accessibility audit found
Warnings:
Warning: AX_FOCUS_01 (These elements are focusable but either invisible
or obscured by another element) failed on the following element:
body > .navbar.navbar-default.navbar-fixed-top > .navbar-header
> .skiplink
> See
https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules#ax_focus_01
for more information.

Warning: AX_TEXT_04 (The purpose of each link should be clear from the
link text) failed on the following elements (1 - 2 of 2):
body > .container > .footer > P > A
body > .container > .footer > P > A:nth-of-type(2)
See
https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules#ax_text_04
for more information.

Warning: AX_COLOR_01 (Text elements should have a reasonable contrast
ratio) failed on the following elements (1 - 5 of 16):
body > .navbar.navbar-default.navbar-fixed-top > .navbar-header
> .skiplink
> body > .navbar.navbar-default.navbar-fixed-top > .navbar-header
> .navbar-brand
> #bs-example-navbar-collapse-1 > .nav.navbar-nav > LI > A
> #bs-example-navbar-collapse-1 > .nav.navbar-nav > LI:nth-of-type(2)
> A
> #bs-example-navbar-collapse-1 > .nav.navbar-nav > LI:nth-of-type(3)
> A
> See
https://github.com/GoogleChrome/accessibility-developer-tools/wiki/Audit-Rules#ax_color_01
for more information.

*** End accessibility audit results ***

Mostly changing contrast and adding screenreader text for links that are
just generated images

--- a/_includes/css/sfbrigade.css
+++ b/_includes/css/sfbrigade.css
@@ -43,6 +43,11 @@ table h3 {
   margin: 25px;
 }
 
+a {
+  color: #2a6496;
+  text-decoration: none;
+}
+
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
@@ -56,13 +61,21 @@ table h3 {
 }
 
 .featured-nav-link {
-  background: #E2768D;
+  background: #CF1B41;
 }
 
 .navbar-default .navbar-nav>li.featured-nav-link>a {
   color: #fff;
   border-left: #cfcfcf 2px solid;
   border-right: #cfcfcf 2px solid;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #111;
+}
+
+.navbar-default .navbar-brand {
+  color: #111;
 }
 
 /* Flip around the padding for proper display in narrow viewports */
@@ -144,7 +157,7 @@ table h3 {
 
 .jumbotron {
   margin-top: 20px;
-  background: rgba(0,0,0,0.44)
+  background: rgba(0,0,0,0.66)
 }
 
 .jumbotron .row {
@@ -472,8 +485,8 @@ transition: background 0.2s,border 0.2s;
   line-height: 3;
 }
 
-.btn-hack {
-  background-color: #0a83c5;
+.btn {
+  background-color: #0970a8;
   color: #fff;
 }
 
@@ -482,8 +495,13 @@ transition: background 0.2s,border 0.2s;
   color: #fff;
 }
 
-.btn-hack:hover, .btn-hack:focus {
+.btn-hack {
   background-color: #0970a8;
+  color: #fff;
+}
+
+.btn:hover, .btn:focus {
+  background-color: #092BA8;
   color: #fff;
 }
 
